src/tests/binary-operators/18.txt
binary-operators/18.c:2:5: error: invalid operands to binary '*' (have 'char' and 'float')
     'c' * 5.9;
     ^
